@@ -42,4 +42,4 @@ jobs:
           zef install --deps-only .
           zef build .
       - name: Run Tests
-        run: prove6 -l t
+        run: prove6 -I. t
